--- a/src/wirecloud/defaulttheme/static/css/styledelements/styled_thumbnail.scss
+++ b/src/wirecloud/defaulttheme/static/css/styledelements/styled_thumbnail.scss
@@ -31,6 +31,11 @@
 .se-thumbnail-missing {
     color: $brand-info;
     font-weight: bold;
+    font-size: $font-size-base;
+    line-height: $line-height-base;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
     img {
         display: none;
